# s21_math_solver

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  Controller.cpp  Controller.hpp  Doxyfile  Makefile  Model.cpp  Model.hpp  View.cpp  View.hpp  calc.h  consoleView.cpp  consoleView.hpp  debug.h  exampleController.cpp  exampleController.hpp  exampleModel.cpp  exampleModel.hpp  hello_world.c  main.cpp  test.mk  tests
src/calc/: calc.c  calc.h
src/credit_calc/: credit_calc.c  credit_calc.h
src/deposit_calc/: deposit_calc.c  deposit_calc.h
src/includes/: calc.h  common.h  debug.h  gui.h  main.h  main.hpp
src/lexer/: lexer.c  lexer.h
src/parser/: lexer.c  lexer.h  parser.c  parser.h  parses.c
src/shunting_yard/: shunting.c  shunting.h
src/stack/: stack.c  stack.h
src/test/: test_calc.h  test_calculate.c  test_credit.c  test_deposit.c  test_lexer.c  test_parser.c  test_runner.c  test_stack.c  test_validation.c
src/tests/: test_calc.h  test_stack.c
src/ui/: ui_test.cpp
src/validation/: validation.c  validation.h
